human readable time lapse, fix static page time bug

--- a/insta485/static/css/post.css
+++ b/insta485/static/css/post.css
@@ -50,6 +50,7 @@ main
 {
     width: 30px;
     margin-right: 10px;
+    object-fit: cover;
 }
 
 .comments
